policies/kyverno/02-require-readonly-rootfs.yaml
---
# Kyverno policy: Enforcing read-only filesystem in containers
# CIS Docker Benchmark 5.12 - Ensure that the container's root filesystem is mounted as read only

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-readonly-rootfs
  annotations:
    policies.kyverno.io/title: Enforce read-only root filesystem
    policies.kyverno.io/category: Docker Security Best Practices
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod, Container
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      Filesystem in container should be mounted as read-only (readOnlyRootFilesystem: true).
      It prevents modifications on filesystem by malware.      
      Appliactions that need write data should use emptyDir or PersistentVolumes for specific paths.
    audit-controls: "CIS-5.12, NIST-CM-7, PCI-DSS-6.6"
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-readonly-filesystem
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - cert-manager
      validate:
        message: >-
          Container MUST contains read-only root filesystem.
          Add: securityContext.readOnlyRootFilesystem: true
          If writting data needed use volumeMounts with emptyDir or PVC.
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
            =(initContainers):
              - securityContext:
                  readOnlyRootFilesystem: true
